# mersenne

./: .dockerignore  .env  .gitignore  LICENSE  biome.json  compose.sviluppo.yml  compose.yml  manage.py  package-lock.json  package.json  postcss.config.js  prek.toml  pyproject.toml  tailwind.config.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: backend.yml  ci.yml  docker_ci.yml  pre-commit.yml
backend/: main.py  pyproject.toml
backend/docker/: Dockerfile
backend/src/mersenne_backend/: __init__.py
backend/src/mersenne_backend/config/: __init__.py  impostazioni.py
backend/tests/config/: test_impostazioni.py
backend/tests/style/: test_import.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
data/2015/: disfida.score  kangourou.score
data/2016/: kangourou.score
data/2018/: disfida.journal
data/2019/: cesenatico_semifinale_B.score
data/2020/: cesenatico_finale.score  cesenatico_semifinale_B.score
data/2021/: cesenatico_finale.score  cesenatico_semifinale_A.score  cesenatico_semifinale_C.score  cesenatico_semifinale_F.score
data/2022/: cesenatico_finale_femminile.score  cesenatico_semifinale_B.score  qualificazione_arezzo_cagliari_taranto_trento.score  qualificazione_brindisi_catania_forli_cesena_sassari.score  qualificazione_campobasso_collevaldelsa_pisa_napoli.journal  qualificazione_campobasso_collevaldelsa_pisa_napoli.score  qualificazione_femminile_2.score  qualificazione_femminile_3.score  qualificazione_firenze.score  qualificazione_milano.journal  qualificazione_milano.score  qualificazione_narni.score  qualificazione_pordenone_udine.score  qualificazione_reggio_emilia.score  qualificazione_roma.score  qualificazione_trieste.score  qualificazione_velletri.score  qualificazione_vicenza.score  torino_pubblico.score
data/2023/: qualificazione_femminile_1.score  qualificazione_femminile_3.score
data/2024/: disfida.journal
data/bugs/: smartematica_2024_short_correct_order.score
data/gare/2014/: kangourou.score
data/gare/2015/: disfida.journal
data/gare/2019/: cesenatico_finale_femminile_formato_journal.score
data/gare/2020/: cesenatico_finale_femminile.score  cesenatico_semifinale_A.score  cesenatico_semifinale_C.score  cesenatico_semifinale_D.score  disfida.score  torino_pubblico.score
data/gare/2021/: cesenatico_semifinale_B.score  cesenatico_semifinale_D.score  cesenatico_semifinale_E.score  torino_pubblico.score
data/gare/2022/: cesenatico_finale.score  cesenatico_semifinale_A.score  cesenatico_semifinale_C.score  cesenatico_semifinale_D.score  qualificazione_femminile_1.score  qualificazione_foggia_lucca_nuoro_tricase.score  qualificazione_genova.score  qualificazione_parma.score  qualificazione_torino.score
data/gare/2023/: disfida_new_format.journal  qualificazione_femminile_2.score  torino.score  torino_pubblico_distanza.score  torino_pubblico_presenza.score
data/gare/2024/: cesenatico_pubblico.score  february_9_short_run.journal  torino.score  torino_medie.score  torino_pubblico.score
data/gare/2026/: disfida.json
data/gare/bugs/: smartematica_2024_short_wrong_order.score
docker/: .gitignore  Dockerfile  _entrypoint.sh  avvia_contenitore.sh  collega_terminale.sh  crea_contenitore.sh  crea_immagine.sh  crea_volume.sh  esegui_lint.sh  esegui_test.sh  esplora_volume.sh  ferma_contenitore.sh
docs/: api.rst  conf.py  index.rst
mersenne/: __init__.py
mersenne/admin/: __init__.py
mersenne/apps/: __init__.py
mersenne/frontend/css/: main.css
mersenne/frontend/js/: main.js
mersenne/frontend/scripts/: biome-lint.js  check-classes.js
mersenne/management/commands/: createuser.py  runserver.py
mersenne/middleware/: __init__.py  rimuovi_commenti_html.py
mersenne/models/: __init__.py  gara.py  problema.py  squadra.py  utente.py
mersenne/services/: __init__.py
mersenne/services/test/: __init__.py  crea_gara.py  crea_utente.py  data_dir.py  disabilita_fixture.py  live_server.py  verifica_screenshot.py
mersenne/templates/cotton/: alert.html  layout.html  navbar.html
mersenne/templates/mersenne/: index.html
mersenne/templatetags/: __init__.py  vite.py
mersenne/urls/: __init__.py
mersenne/views/: __init__.py  index.py
mersenne_test_utils/: __init__.py
mersenne_test_utils/factories/: __init__.py
mersenne_test_utils/fixtures/: __init__.py  data_dir.py  live_server.py  verifica_screenshot.py
tests/: README.md
tests/browser/: conftest.py  test_mock_browser.py
tests/browser/fixtures/: test_live_server.py  test_verifica_screenshot_fixture.py
tests/browser/services/test/: test_verifica_screenshot_fixture.py
tests/browser/views/: test_index_browser.py
tests/integration/: conftest.py
tests/integration/data/: test_cartella_data.py
tests/integration/models/: test_gara_db.py  test_utente_db.py
tests/integration/views/: test_index_client.py
tests/unit/: conftest.py
tests/unit/conftest/: test_fixtures.py  test_markers.py
tests/unit/models/: test_gara.py  test_utente.py
tests/unit/style/: test_docs_api.py  test_from_import.py  test_import.py
tests/unit/views/: test_index.py
