[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mersenne"
version = "0.0.dev1"
authors = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"}
]
maintainers = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"}
]
description = "Gestore di gare a squadre"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "asgiref==3.11.1",
    "cotton-icons==0.2.0",
    "Django==6.0.3",
    "django-cotton==2.6.2",
    "sqlparse==0.5.5",
    "whitenoise==6.12.0"
]

[project.urls]
homepage = "https://github.com/dmf-unicatt/mersenne"
repository = "https://github.com/dmf-unicatt/mersenne"
issues = "https://github.com/dmf-unicatt/mersenne/issues"
funding = "https://github.com/sponsors/francesco-ballarin"

[project.optional-dependencies]
docs = [
    "sphinx==9.1.0"
]
lint = [
    "django-stubs==5.2.9",
    "mypy==1.19.1",
    "ruff==0.15.6",
    "types-requests==2.32.4.20260107",
    "yamllint==1.38.0"
]
tests = [
    "coverage[toml]==7.13.4",
    "pillow==12.1.1",
    "playwright==1.58.0",
    "pytest==9.0.2",
    "pytest-django==4.12.0",
    "pytest-random-order==1.2.0",
    "requests==2.32.5",
    "uvicorn==0.42.0"
]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
django_debug_mode = "keep"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "ANN", "D", "E", "F", "FLY", "I", "ICN", "N", "Q", "RUF", "UP", "W"
]
ignore = ["D203", "D213", "D401"]

[tool.ruff.lint.per-file-ignores]
"mersenne/**/__init__.py" = ["F401"]
"mersenne_test_utils/**/__init__.py" = ["F401"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools.package-data]
mersenne = ["py.typed"]

[tool.setuptools.packages.find]
include = ["mersenne", "mersenne.*"]
namespaces = false
