[project]
name = "mersenne-backend"
version = "0.0.0.dev1"
authors = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"}
]
maintainers = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"}
]
description = "Backend per la gestione di gare a squadre"
license = "MIT"
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "anyio>=4.0.0",
    "fastapi[standard]>=0.114.2",
    "httpx>=0.25.1",
    "pydantic>2.0",
    "pydantic-settings>=2.2.1",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.7",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "redis>=5.2.1",
    "tortoise-orm[asyncpg]>=0.25.1"
]

[project.urls]
homepage = "https://github.com/dmf-unicatt/mersenne"
repository = "https://github.com/dmf-unicatt/mersenne"
issues = "https://github.com/dmf-unicatt/mersenne/issues"
funding = "https://github.com/sponsors/francesco-ballarin"

[dependency-groups]
dev = [
    "coverage[toml]>=7.4.3",
    "poethepoet>=0.42.1",
    "prek>=0.2.24",
    "pydoc-markdown>=4.8.2",
    "pytest>=7.4.3",
    "ruff>=0.2.2",
    "ty>=0.0.24",
    "yamllint>=1.38.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mersenne_backend"]

[tool.poe.tasks]
dev = "fastapi dev --reload main.py"
preview = "fastapi run --host 127.0.0.1 --workers 4 main.py"
deploy = "fastapi run --workers 4 main.py"
test = "uv run pytest"

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "ANN", "ARG", "B", "C4", "D", "E", "F", "FLY", "I", "ICN", "N", "PTH", "Q",
    "RUF", "T20", "TC", "UP", "W"
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/mersenne_backend/**/__init__.py" = ["F401"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"
